[project]
name = "NetScan"
version = "0.1.0"
description = "ðŸš€ Hack the Shadows, Unveil the Secrets! ðŸ”¥ðŸ”"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "colorama>=0.4.6",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "trafilatura>=2.0.0",
]
